# conch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml  Dockerfile  start.sh
backend/src/: db_simple.rs  lib.rs  main.rs  state.rs
backend/src/api/: mod.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/events/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: mod.rs
backend/src/websocket/: mod.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Hero.css  Hero.tsx  LiveEvents.tsx  Loader.tsx  Navbar.css  Navbar.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/lib/: api.ts  store.ts  types.ts
frontend/src/pages/: CollaborationHub.tsx  ConchDetail.tsx  ConchFeed.tsx  CreateConch.tsx  DashboardPage.tsx  ExplorePage.tsx  GraphView.tsx  LandingPage.tsx  ProfilePage.tsx
frontend/src/styles/: design-system.css  index.css  pages.css
migrations/: 001_initial.sql  002_user_profile.sql
