[package]
name = "conch-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
path = "src/lib.rs"

[[bin]]
name = "conch-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "tls-native-tls"] }
tokio-postgres = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = "9.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"

# Async
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Redis/Events
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
regex = "1.10"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

[dev-dependencies]
